fix alignment of last row and add legend

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ body {
     margin: 0;
     padding: 0;
 }
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .table-container {
     display: flex;
@@ -16,10 +21,25 @@ body {
     align-items: center;
 }
 
-.episode-label,
-.season-label {
+.episode-label {
     font-weight: bold;
     margin-right: 10px;
+}
+
+.season-label {
+    font-weight: bold;
+    position: relative;
+    width: 80px; /* Adjust the width as needed */
+    text-align: right; /* Adjust the text alignment as needed */
+}
+
+.season-label::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 10px; /* Adjust as needed */
+    height: 100%;
 }
 
 .episode-label {
@@ -33,32 +53,76 @@ body {
 }
 
 .episode-number {
-display: flex;
-align-items: center;
-justify-content: center;
-width: 60px;
-height: 60px;
-margin: 2px;
-font-weight: bold;
-font-size: 22px;
-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    margin: 2px;
+    font-weight: bold;
+    font-size: 22px;
+    color: #000;
 }
 
 .episode {
-display: flex;
-align-items: center;
-justify-content: center;
-width: 60px;
-height: 60px;
-margin: 2px;
-font-weight: bold;
-font-size: 12px;
-color: #fff;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    margin: 2px;
+    font-weight: bold;
+    font-size: 12px;
+    color: #fff;
+    cursor: pointer;
+}
+.tooltip {
+    position: absolute;
+    top: -30px; /* Adjust the distance from the episode tile */
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 5px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 5px;
+    display: none;
 }
 
-.rating-1 { background-color: #ff0000; }
+.episode:hover .tooltip {
+    display: block;
+}
+
+.legend {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+
+}
+
+.legend-box {
+    width: 60px;
+    height: 60px;
+    margin: 0 5px;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 16px;
+    color: #fff;
+}
+
+.legend-1 { background-color: #ff0000; }
+.legend-2 { background-color: #ff4500; }
+.legend-3 { background-color: #ffa500; }
+.legend-4 { background-color: #ffd700; }
+.legend-5 { background-color: #a0c92e; }
+
+.rating-1 { background-color: #6f1c1c; }
 .rating-2 { background-color: #ff4500; }
 .rating-3 { background-color: #ffa500; }
-.rating-4 { background-color: #ffd700; }
+.rating-4 { background-color: #c2e071; }
 .rating-5 { background-color: #a0c92e; }
 .rating-6 { background-color: #008000; }
